# cdp

./: Cargo.toml  input.json
.github/workflows/: ci.yaml  test.yaml
cdp_gen/: .gitignore  Cargo.toml
cdp_gen/src/: gen.rs  main.rs  parser.rs
crates/cdp_gen/: Cargo.toml
crates/cdp_gen/src/: gen.rs  main.rs  parser.rs
examples/: main.rs  network_monitor.rs  remote_debugging_pipe.rs  server.rs
network_monitor/: Cargo.toml  config.json5
network_monitor/src/: action.rs  app.rs  cli.rs  config.rs  main.rs  tui.rs
network_monitor/src/components/: home.rs
src/: lib.rs  pipe_client.rs  tungstenite_client.rs
tests/: event_test.rs  open_dev_tools.rs  support.rs  test.rs
