[workspace]
members = ["cdp_gen"]

[package]
name = "cdp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["deflate", "gzip", "json", "socks", "stream"] }
serde = { version = "1.0.217", features = ["serde_derive", "derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"

[features]
default = [ "experimental" ]
experimental = []
