[workspace]
members = ["cdp_gen", "network_monitor"]

[package]
name = "cdp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { optional = true, version = "0.12.12", features = ["deflate", "gzip", "json", "socks", "stream"] }
serde = { version = "1.0.217", features = ["serde_derive", "derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
anyhow = "1.0.95"
tungstenite = "0.26.1"
nix = { version = "0.29.0", features = ["process", "fs"] }

[features]
default = [ "reqwest" ]
experimental = []

[dev-dependencies]
axum = "0.8.1"
