[package]
name = "network-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
# axum = "0.8.1"
better-panic = "0.3.0"
clap = { version = "4.5.29", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.15.8"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.169"
# nix = { version = "0.29.0", features = ["process", "fs"] }
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["serde_derive", "derive"] }
serde_json = "1.0.135"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
# tokio-tungstenite = "0.26.1"
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
# tungstenite = "0.26.1"
vergen-gix = { version = "1.0.6", features = ["build", "cargo"] }
cdp = { path = ".." }
pretty_assertions = "1.4.1"
